デザイン修正 タブレット画面

--- a/front/assets/scss/_mixin.scss
+++ b/front/assets/scss/_mixin.scss
@@ -1,6 +1,6 @@
 $pc: 1250px; // PC
 $tab: 768px; // タブレット
-$sp: 468px; // スマホ
+$sp: 820px; // スマホ // NOTE: タブレット画面を考慮するのがめんどくさいので$spを大きくしてSP画面をタブレット画面にする
 
 @mixin pc {
   @media (max-width: ($pc)) {
